[[bin]]
name = "review-migrate"
required-features = [ "migrate",]
path = "src/migrate.rs"

[package]
name = "review-database"
version = "0.41.0"
edition = "2024"

[dependencies]
aho-corasick = "1"
anyhow = "1"
bincode = "1"
data-encoding = "2"
diesel_derives = "2.0"
diesel_migrations = "2"
flate2 = "1.0"
futures = "0.3"
humantime-serde = "1"
ip2location = "0.6.0"
memchr = "2"
num-derive = "0.4"
num-traits = "0.2"
postgres-protocol = "0.6"
rand = "0.9"
rocksdb = "0.24"
rustls-native-certs = "0.8"
rustls-pemfile = "2"
rustls-pki-types = "1"
semver = "1"
serde_bytes = "0.11"
serde_json = "1"
structured = "0.15"
strum = "0.27"
strum_macros = "0.27"
thiserror = "2"
tokio-postgres-rustls = "0.13"
toml = "0.8.13"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"

[features]
default = []
migrate = [ "config", "tokio/rt-multi-thread",]

[dependencies.argon2]
version = "0.5"
features = [ "std",]

[dependencies.attrievent]
path = "../attrievent"

[dependencies.bb8-postgres]
version = "0.9"
features = [ "with-serde_json-1", "with-chrono-0_4",]

[dependencies.chrono]
version = ">=0.4.35,<0.4.40"
default-features = false
features = [ "serde",]

[dependencies.config]
version = "0.15"
optional = true

[dependencies.diesel]
version = "2"
features = [ "chrono", "postgres", "serde_json",]

[dependencies.diesel-async]
version = "0.5"
features = [ "bb8", "postgres",]

[dependencies.ipnet]
version = "2"
features = [ "serde",]

[dependencies.ring]
version = "0.17"
features = [ "std",]

[dependencies.rustls]
version = "0.23"
default-features = false
features = [ "ring", "std",]

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.tokio]
version = "1"
features = [ "fs", "macros",]

[lints.clippy]
pedantic = "warn"
unwrap_used = "warn"
