[[example]]
name = "minireview"

[package]
name = "review-web"
version = "0.27.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-graphql-axum = "7"
async-trait = "0.1"
bincode = "1"
futures = "0.3"
futures-util = "0.3"
http = "1"
ip2location = "0.5.4"
itertools = "0.14"
jsonwebtoken = "9"
num-traits = "0.2"
rustls-native-certs = "0.8"
rustls-pemfile = "2"
serde_json = "1"
strum = "0.27"
strum_macros = "0.27"
thiserror = "2"
tokio = "1"
tracing = "0.1"

[dev-dependencies]
assert-json-diff = "2"
futures = "0.3"
serial_test = "3"
tempfile = "3"
tracing-appender = "0.2"

[dependencies.async-graphql]
version = "7"
features = [ "chrono", "string_number",]

[dependencies.axum]
version = "0.8"
features = [ "macros", "tokio", "ws",]

[dependencies.axum-server]
version = "0.7"
features = [ "tls-rustls-no-provider",]

[dependencies.axum-extra]
version = "0.10"
features = [ "typed-header",]

[dependencies.chrono]
version = ">=0.4.35,<0.4.40"
default-features = false
features = [ "serde",]

[dependencies.ipnet]
version = "2"
features = [ "serde",]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = [ "rustls-tls-native-roots",]

[dependencies.review-database]
path = "../review-database"

[dependencies.roxy]
path = "../roxy"

[dependencies.rustls]
version = "0.23"
default-features = false
features = [ "ring", "std",]

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.tower-http]
version = "0.6"
features = [ "fs", "trace",]

[dependencies.vinum]
path = "../vinum"

[dev-dependencies.config]
version = "0.15"
features = [ "toml",]
default-features = false

[dev-dependencies.tokio]
version = "1"
features = [ "rt-multi-thread", "signal", "sync",]

[dev-dependencies.tracing-subscriber]
version = "0.3"
features = [ "env-filter",]

[lints.clippy]
pedantic = "warn"
unwrap_used = "warn"
